2012-04-02  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/52756
	* tree-ssa-threadupdate.c (def_split_header_continue_p): New function.
	(thread_through_loop_header): After threading through the loop latch
	remove the split part from the loop and clear further threading
	opportunities that would create a multiple entry loop.

2012-04-02  Richard Guenther  <rguenther@suse.de>

	PR rtl-optimization/52800
	* cprop.c (execute_rtl_cprop): Call cleanup_cfg with
	CLEANUP_CFG_CHANGED.

2012-04-02  Richard Guenther  <rguenther@suse.de>

	PR middle-end/52803
	* loop-init.c (gate_handle_loop2): Destroy loops here if
	we don't enter RTL loop optimizers.

2012-04-02  Uros Bizjak  <ubizjak@gmail.com>

	Partially revert:
	2012-03-29  Richard Guenther  <rguenther@suse.de>

	* rtl.h (extended_count): Remove.
	* combine.c (extended_count): Remove.

2012-04-02  Dodji Seketeli  <dodji@redhat.com>

	PR c++/40942
	* pt.c (more_specialized_fn):  Don't apply decay conversion to
	types of function parameters.

2012-04-02  Tristan Gingold  <gingold@adacore.com>

	* ggc-page.c (PAGE_L1_SIZE, PAGE_L2_SIZE, LOOKUP_L1, LOOKUP_L2)
	(ggc_allocated_p, lookup_page_table_entry, set_page_table_entry)
	(alloc_page, init_ggc, clear_marks, struct ggc_pch_data)
	(ggc_pch_this_base): Use uintptr_t instead of size_t.

2012-03-31  H.J. Lu  <hongjiu.lu@intel.com>

	PR bootstrap/52784
	* config/i386/i386.c (ix86_option_override_internal): Don't
	check TARGET_64BIT if TARGET_64BIT_DEFAULT is false.

2012-03-31  Eric Botcazou  <ebotcazou@adacore.com>

	* tree-cfg.c (call_can_make_abnormal_goto): New predicate.
	(stmt_can_make_abnormal_goto): Use it.
	(is_ctrl_altering_stmt): Likewise.

2012-03-30  Naveen H.S  <naveen.S@kpitcummins.com>
	    Kaz Kojima  <kkojima@gcc.gnu.org>

	* config/sh/sh.c (push_regs): Skip banked registers when
	resbank attribute is specified.
	(sh_expand_epilogue): Likewise.

2012-03-30  Richard Henderson  <rth@redhat.com>

	PR debug/52727